Fixed truncation of article header on small screens.

--- a/styles/sass/layout.scss
+++ b/styles/sass/layout.scss
@@ -64,9 +64,9 @@ header#article-header {
   width: 100%;
   background-color: #262626;
   color: white;
-  height: 170px;
+  height: auto;
   text-align: center;
 
-  padding: 5px 0 0 0;
+  padding: 5px 0 10px 0;
 }
 
