--- a/styles/sass/typography.scss
+++ b/styles/sass/typography.scss
@@ -24,4 +24,8 @@ header#article-header {
 	h1 {
 		font-size: 3em;
 	}
+	h2 {
+		font-size: 1.3em;
+		font-style: italic;
+	}
 }
